Added newpage.html along with bootsrap cdn.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             </div>
           </div>
         </div>
-      </div>
+      </div><br>
+      <a href="newpage.html">New page</a>
 
 
 
